--- a/templates/shorten_url.html
+++ b/templates/shorten_url.html
@@ -41,7 +41,8 @@
                             console.log(windows_domain,'windows_domain');
                             short_url = windows_domain + "/" + data;
                             console.log(short_url,'short_url');
-                            $("#shor-url").html("<a href='"+short_url+"'>"+short_url+"</a>");
+                            {% comment %} $("#shor-url").html("<a href='"+short_url+"' target='"_blank"'>"+short_url+"</a>"); {% endcomment %}
+                            $("#shor-url").html("<a href='"+short_url+"' target='_blank'>"+short_url+"</a>");
     
                         }
                     });
