--- a/templates/short_url_detail.html
+++ b/templates/short_url_detail.html
@@ -13,6 +13,7 @@
     <p>Long URL: {{ object.long_url }}</p>
     <p>Created: {{ object.created_at }}</p>
     <p>Clicks: {{ object.count }}</p>
+    <p>URL: <a href="{{short_url}}">{{short_url}}</a>  </p>
 
 </body>
 </html>
